[gd_scene load_steps=4 format=3 uid="uid://05t8mgru82kw"]

[ext_resource type="Texture2D" uid="uid://bfabre0uc2jtx" path="res://assets/pngs/menu.png" id="1_c5ccd"]
[ext_resource type="Script" uid="uid://jcotm461wqe3" path="res://scenes/turrets/upgrade_menu.gd" id="2_c5ccd"]
[ext_resource type="FontFile" uid="uid://dmkk06o8nk7i1" path="res://assets/80s-retro-future.ttf" id="3_u7que"]

[node name="UpgradeMenu" type="TextureRect"]
z_index = 5
offset_right = 131.0
offset_bottom = 143.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1_c5ccd")
expand_mode = 1
script = ExtResource("2_c5ccd")

[node name="TurretType" type="Label" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 13.0
offset_right = 116.0
offset_bottom = 33.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_u7que")
theme_override_font_sizes/font_size = 12
text = "placeholder"

[node name="TurretLevel" type="Label" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 28.0
offset_right = 61.0
offset_bottom = 46.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_u7que")
theme_override_font_sizes/font_size = 13
text = "LEVEL"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 50.0
offset_right = 116.0
offset_bottom = 131.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="UpgradeLevel" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_u7que")
theme_override_font_sizes/font_size = 12
text = "LEVEL
5 PLUTONIUM"

[node name="DeleteTurretbtn" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_u7que")
theme_override_font_sizes/font_size = 12
text = "Delete Turret"

[connection signal="pressed" from="ScrollContainer/VBoxContainer/UpgradeLevel" to="." method="_on_upgrade_level_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/DeleteTurretbtn" to="." method="_on_delete_turretbtn_pressed"]
